<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.tatoado.ramabluewingood.SelectUserActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_player_text"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/button_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:text="@string/player1_text"/>

    <Button
        android:id="@+id/button_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_player1"
        android:text="@string/player2_text"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ic_launcher"
        android:layout_below="@+id/button_player2"
        android:layout_margin="20dp"/>
</RelativeLayout>
